update router add vẻifytoken
