# BackEnd/src/api/routes/checkoutRouter.js
@@ -1,0 +1,7 @@
+const router = require("express").Router();
+const checkoutController = require("../controllers/checkoutController");
+
+router.post("/orders",checkoutController.checkoutOrder);
+router.get("/orders/:orderID/capture",checkoutController.orderCapture);
+
+module.exports = router;
