# BackEnd/src/api/routes/index.js
@@ -23,6 +23,8 @@ let initWebRoutes = (app) => {
   router.use("/commentBlog", require("./commentBlogRouter.js"));
   router.use("/product", require("./productRouter.js"));
   router.use("/cart", require("./cartRouter.js"));
+  router.use("/checkout", require("./checkoutRouter.js"));
+  router.use("/rateProduct", require("./rateProductRouter.js"));
   router.get("/", (req, res) => {
     res.send("hello there !");
   });
